Fixed some legibility issues on index

--- a/css/checkout-success.css
+++ b/css/checkout-success.css
@@ -41,7 +41,7 @@ body {
 	grid-area: cta;
 	font-family: "Bebas Neue", Arial, Helvetica, sans-serif;
 	font-size: 2.25em;
-	background-color: #f89235;
+	background-color: #ff7a00;
 	color: #f1f1e6;
 	border-radius: 15px;
 	display: block;
@@ -54,8 +54,8 @@ body {
 
 .checkout-cta:hover {
 	background-color: #f1f1e6;
-	color: #f89235;
-	outline: 5px solid #f89235;
+	color: #ff7a00;
+	outline: 5px solid #ff7a00;
 	outline-offset: -5px;
 }
 
